RESOLVED FIXED299237
WebGPU: navigator.gpu is not defined: Version 26.0.1 / Sequoia 15.7, WebGPU feature is unchecked and says "Preview".
https://bugs.webkit.org/show_bug.cgi?id=299237
Summary WebGPU: navigator.gpu is not defined: Version 26.0.1 / Sequoia 15.7, WebGPU f...
Erik Zivkovic
Reported 2025-09-20 03:09:25 PDT
Created attachment 476812 [details] Settings showing WebGPU disabled and in the "Preview" category. I have upgraded Sequoia to 15.7 (24G222) and Safari to Version 26.0.1 (20622.1.22.118.4). The rotating cube example https://webgpu.github.io/webgpu-samples/?sample=rotatingCube won't load, the page says "navigator.gpu is not defined - WebGPU not available in this browser" When I open Safari 26 settings and go to "feature flags" it says that the "WebGPU" and "WebGPU support for HDR" features are disabled and are marked as "Preview". See attached screenshot. According to this blog post https://webkit.org/blog/17333/webkit-features-in-safari-26-0/#webgpu "[WebGPU] is now shipping in Safari 26.0 for macOS, iOS, iPadOS, and visionOS".
Attachments
Settings showing WebGPU disabled and in the "Preview" category. (417.39 KB, image/png)
2025-09-20 03:09 PDT, Erik Zivkovic
no flags
WebGPU samples "navigator.gpu is not defined - WebGPU not available in this browser" (700.19 KB, image/png)
2025-09-20 03:11 PDT, Erik Zivkovic
no flags
WebGPU samples again with Safari and macOS badges visible (613.47 KB, image/png)
2025-09-20 03:14 PDT, Erik Zivkovic
no flags
Erik Zivkovic
Comment 1 2025-09-20 03:11:36 PDT
Created attachment 476813 [details] WebGPU samples "navigator.gpu is not defined - WebGPU not available in this browser"
Erik Zivkovic
Comment 2 2025-09-20 03:14:08 PDT
Created attachment 476814 [details] WebGPU samples again with Safari and macOS badges visible
Mike Wyrzykowski
Comment 3 2025-09-21 13:16:02 PDT
navigator.gpu requires macOS Tahoe, iOS 26, visionOS 26 or later
Alexey Proskuryakov
Comment 4 2025-09-26 11:12:57 PDT
*** Bug 299510 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5 2025-09-26 11:15:00 PDT
Mike, perhaps we should completely hide the feature on older OS versions then? "Preview" status is now inaccurate for it on macOS 15.
Mike Wyrzykowski
Comment 6 2025-09-26 11:37:16 PDT
Agreed
Radar WebKit Bug Importer
Comment 7 2025-09-26 11:38:09 PDT
Mike Wyrzykowski
Comment 8 2025-09-26 11:44:23 PDT
EWS
Comment 9 2025-10-17 22:31:30 PDT
Committed 301759@main (61fa3ded21da): <https://commits.webkit.org/301759@main> Reviewed commits have been landed. Closing PR #51401 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.