WebGPU: navigator.gpu is not defined: Version 26.0.1 / Sequoia 15.7, WebGPU feature is unchecked and says "Preview" https://bugs.webkit.org/show_bug.cgi?id=299237 radar://161426196

Reviewed by Geoffrey Garen.

WebGPU requires macOS 26.0 or later.

Instead of advertising Preview support for downlevels, mark the feature unavailable.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:

Canonical link: https://commits.webkit.org/301759@main